[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infratex"
version = "0.3.0"
description = "Python SDK for the Infratex document intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Infratex", email = "support@infratex.io" }]
keywords = ["infratex", "pdf", "document", "parsing", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://infratex.io"
Documentation = "https://docs.infratex.io"
Repository = "https://github.com/infratex/infratex-python"

[tool.hatch.build.targets.wheel]
packages = ["infratex"]
